correct offscreen variables in _settings.scss

--- a/src/assets/scss/components/_footer.scss
+++ b/src/assets/scss/components/_footer.scss
@@ -24,6 +24,9 @@ footer {
   color: $white;
   nav {
     color: white;
+    a {
+      color: white;
+    }
   }
   background-color: $primary-color;
   padding-top: 1rem;
