--- a/src/assets/scss/components/_top-bar.scss
+++ b/src/assets/scss/components/_top-bar.scss
@@ -19,10 +19,23 @@
   .site-slogan {
     line-height: 1;
   }
+  .site-name {
+    color: $green-dark;
+  }
   ul {
     background-color: transparent;
-    a {
-      color: $white;
+    line-height: 1;
+    margin-bottom: 1em;
+    li {
+      padding: 0;
+      margin: 0;
     }
+    a {
+      padding: 0;
+      margin: 0 0 0 1em;
+    }
+  }
+  #user-menu {
+    color: $primary-color;
   }
 }
